# Marmot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: testing.yml
data/: batch-1.jsonl  test-1.psl  test-3.json  test-3.psl  test-4.psl
docs/: cli.md  index.md  print-postprocessing.md  psl.md  scripting.md  server.md
docs/drafts/: frame.md  scripting.md
docs/tutorial/: FRAME_BADGE.lua  FRAME_BADGE_DEFAULT.lua  FRAME_BASE.lua  FRAME_BASE_DEFAULT.lua  FRAME_BASE_SUPER.lua  FRAME_LOGO.lua  FRAME_LOGO_DEFAULT.lua  FRAME_PRICE_SALE.lua  FRAME_PRICE_SUPER.lua  FRAME_PRICE_TEXT.lua  FRAME_QR_CODES.lua  FRAME_REG_PRICE.lua  LAYER_DEFAULT_THEME.lua  LAYER_SUPER_THEME.lua  remap.plt  tutorial-10k.jsonl  tutorial.json  tutorial.md  tutorial.psl
src/: cli.rs  fonts.rs  lexer.rs  lib.rs  main.rs  package.rs  parser.rs  renderer.rs  resources.rs  scripting.rs  util.rs  validator.rs
src/cli/: test.rs
src/lexer/: test.rs
src/ops/: batch.rs  check.rs  common.rs  mod.rs  pack.rs  render.rs
src/package/: test.rs
src/parser/: test.rs
src/renderer/: test.rs
src/scripting/: test.rs
src/validator/: test.rs
test/: batch-1.psl  batch-2.psl  test-1.psl  test-2.psl  test-5.psl  test-6.psl  test-7.psl
test/data/: batch-10k.jsonl  test-1.json  test-5.json
