[package]
name = "marmot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
cairo-rs = { version = "0.22.0", features = ["pdf"] }
pango = "0.22.6"
pangocairo = "0.22.0"
zip = "2"
tempfile = "3"
ttf-parser = "0.25.1"
image = { version = "0.25", default-features = false, features = ["png","jpeg","webp"] }
unicode-segmentation = "1.13.2"
barcoders = { version = "2", default-features = false }
qrcode = { version = "0.14", default-features = false }
datamatrix = "0.3"
mlua = { version = "0.11", features = ["lua54", "vendored"] }

[build-dependencies]
pkg-config = "0.3"
