[package]
name = "marmot"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap"]
server = ["dep:axum", "dep:tokio"]

[dependencies]
clap = { version = "4.6.1", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
cairo-rs = { version = "0.22.0", features = ["pdf", "png"] }
pango = "0.22.6"
pangocairo = "0.22.0"
zip = "2"
tempfile = "3"
ttf-parser = "0.25.1"
image = { version = "0.25", default-features = false, features = ["png","jpeg","webp"] }
unicode-segmentation = "1.13.2"
barcoders = { version = "2", default-features = false }
qrcode = { version = "0.14", default-features = false }
datamatrix = "0.3"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
dither = "1.3.10"

[build-dependencies]
pkg-config = "0.3"

[patch.crates-io]
dither = { path = "vendor/dither" }

[[bin]]
name = "marmot"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "marmot-server"
path = "src/bin/server.rs"
required-features = ["server"]
